1.1.10
	+ New release
1.1
	+ Added 'parentModule' to model class to avoid recursive problems
	+ Added Float type
	+ Apache module allows to add configuration includes from other modules
	+ Display remote services button if subscribed
	+ Event daemon may received events through a named pipe
	+ Bugfix. SysInfo revokes its config correctly
	+ Added storer property to types in order to store the data in
	somewhere different from GConf
	+ Added protected property 'volatile' to the models to indicate
	that they store nothing in GConf but in somewhere different
	+ System Menu item element 'RAID' is always visible even when RAID
	is not installed
	+ Files in deleted rows are deleted when the changes are saved
	+ Fixed some bug whens backing and restore files
	+ Components can be subModels of the HasMany type
	+ Added EBox::Types::Text::WriteOnce type
	+ Do not use rows(), use row to force iteration over the rows and increase
	performance and reduce memory use.
	+ Do not suggest_sync after read operations in gconf
	+ Increase MaxRequestsPerChild to 200 in eBox's apache
	+ Make apache spawn only one child process
	+ Log module is backed up and restored normally because the old
	problem is not longer here
	+ Backup is more gentle with no backup files in backup directory,
	now it does not delete them
	+ HasMany  can retrieve again the model and row after the weak
	refence is garbage-collected. (Added to solve a bug in the doenload
	bundle dialog)
	+ EBox::Types::DomainName no longer accepts IP addresses as domain
	names
	+ Bugfix: modules that fail at configuration stage no longer appear as enabled
	+ Add parameter to EBox::Types::Select to disable options cache
0.12.103
	+ Bugfix: fix SQL statement to fetch last rows to consolidate
0.12.102
	+ Bugfix: consolidate logs using the last date and not starting from scratch 
0.12.101
	+ Bugfix: DomainName type make comparisons case insensitive
	according to RFC 1035
0.12.100